:bug: Fix snippet insertion and remove Google dark mode

--- a/stylesheets/snippets.css
+++ b/stylesheets/snippets.css
@@ -14,7 +14,7 @@
     border-radius: 8px;
     box-shadow: 0 0 #0000, 0 0 #0000, 0 20px 25px -5px rgba(0, 0, 0, 0.2),
         0 10px 10px -5px rgba(0, 0, 0, 0.1);
-    max-width: 90%;
+    max-width: 30vw;
     animation: popup 0.2s cubic-bezier(0.25, 1, 0.5, 1);
     margin-bottom: 20px;
     word-wrap: break-word;
